# libripc

./: .gitignore  configure.ac
clients/: .gitignore  common.h  ripc_long_pingpong_client.c  ripc_long_pingpong_server.c  ripc_pingpong_client.c  ripc_pingpong_server.c
src/: .gitignore  Makefile.am  common.h  config.h.in  memory.h  resolver.h  resources.h  ripc.c  ripc.h
src/bgp/: resolver.h
src/infiniband/: .gitignore  Makefile.am  common.h  resolver.c  resolver.h  resources.c  resources.h  ripc.c
src/iwarp/: Makefile.am  common.h  memory.c  memory.h  resolver.c  resolver.h  resources.c  resources.h  ripc.c
src/local/: .gitignore  resolver.h
